#0 Add travis integration

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "model-buyer-ui",
+  "name": "data-owner-ui",
+  "homepage": "https://data-owner-ui.github.io",
   "version": "1.0.0",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
@@ -30,7 +31,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,5 +43,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
+  }
 }
