Test travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ cache:
   directories:
   - node_modules
 
+before_script:
+ - export NODE_OPTIONS=–max_old_space_size=4096
+
 script:
   - npm run build
 
@@ -32,3 +35,5 @@ deploy:
   local_dir: build
   on:
     branch: master
+
+
