--- a/src/pages/models/package.json
+++ b/src/pages/models/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Datasets",
+  "name": "Models",
   "version": "1.0.0",
   "private": true,
-  "main": "DatasetsContainer.js"
+  "main": "ModelsContainer.js"
 }
