--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "data-owner-ui",
-  "homepage": "https://data-owner-ui.github.io",
   "version": "1.0.0",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
@@ -38,12 +37,18 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
     "gh-pages": "^2.1.1"
   }
