Change of training flow applied in the UI. Using nodejs proxy backend to comunicate to data owner api. Changed router for improving ux.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "data-owner-ui",
   "version": "1.0.0",
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
