--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "proxy": "http://localhost:4000",
   "dependencies": {
-    "@material-ui/core": "^3.9.2",
-    "@material-ui/icons": "^3.0.2",
+    "@material-ui/core": "^4.0.2",
+    "@material-ui/icons": "^4.0.2",
+    "@material-ui/styles": "^4.0.2",
     "apexcharts": "^3.6.3",
     "classnames": "^2.2.6",
     "font-awesome": "4.7.0",
@@ -13,7 +14,9 @@
     "react": "^16.8.2",
     "react-apexcharts": "^1.3.0",
     "react-dom": "^16.8.2",
+    "react-google-login": "^5.0.4",
     "react-google-maps": "^9.4.5",
+    "react-json-to-table": "^0.1.5",
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
@@ -24,8 +27,7 @@
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "tinycolor2": "^1.4.1",
-    "react-google-login": "^5.0.4"
+    "tinycolor2": "^1.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
