--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "classnames": "^2.2.6",
     "font-awesome": "4.7.0",
     "line-awesome": "icons8/line-awesome",
+    "moment": "^2.24.0",
     "mui-datatables": "^2.0.0-beta.58",
     "react": "^16.8.2",
     "react-apexcharts": "^1.3.0",
@@ -17,6 +18,7 @@
     "react-google-login": "^5.0.4",
     "react-google-maps": "^9.4.5",
     "react-json-to-table": "^0.1.5",
+    "react-moment": "^0.9.6",
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
